--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 PyPDF2>=3.0.0
 Pillow>=9.0.0
+reportlab>=3.6.0
+striprtf>=0.0.24
+xhtml2pdf>=0.2.11
+svglib>=1.5.1
+pillow-heif>=0.10.0
 pyinstaller>=5.0.0
 tkinterdnd2 
