--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,6 @@ pyinstaller>=5.0.0
 tkinterdnd2 
 PySide6>=6.0.0
 pyqtdarktheme==2.1.0 
+docx2pdf>=0.1.8
+pptxtopdf>=0.0.2
+pywin32>=306; sys_platform == "win32" # For Windows-specific COM interop 
